--- a/src/styles/CreateTodoButton.css
+++ b/src/styles/CreateTodoButton.css
@@ -1,20 +1,32 @@
 .createTodoButton{
-    width: 60px;
-    height: 60px;
-    padding: 20 px;
+    
+    background-color:  #61DAFA;
+    box-shadow: 0px 5px 25px rgba(46, 101, 116, 0.5); 
+    border: none;
     border-radius: 50%;
-    font-size: 30px;
-    color: white;
-    font-weight: bold;
     cursor:pointer;
-    background-color:  rgb(4, 206, 206);
-    box-shadow: black 1px 6px 15px;
-    transition: 0.8s;
+    font-size: 45px;
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+    font-weight: bold;
+    color: #fafafa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 64px;
+
+    
+
+
+   
+    transition: 0.3s ease;
+
 }
 
 .createTodoButton:hover{
-    background-color:aqua;
+    background-color:aqua; 
     transform: scale(1.2) rotate(270deg);
-    /* transform: rotate(270deg); */
     transition: 0.3s;
 }
