--- a/src/App/App.css
+++ b/src/App/App.css
@@ -11,9 +11,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  background: rgb(255,255,255);
+  min-height: 100vh;
   background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(168,167,167,1) 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   text-align: center;
-
+ 
 }
