--- a/src/styles/CreateTodoButton.css
+++ b/src/styles/CreateTodoButton.css
@@ -1,7 +1,7 @@
 .createTodoButton{
     
     background-color:  #61DAFA;
-    box-shadow: 0px 5px 25px rgba(46, 101, 116, 0.5); 
+    box-shadow: 0px 2px 25px 15px rgba(46, 101, 116, 0.5); 
     border: none;
     border-radius: 50%;
     cursor:pointer;
@@ -16,6 +16,7 @@
     align-items: center;
     width: 64px;
     height: 64px;
+    z-index: 1;
 
     
 
