--- a/src/styles/TodoCounter.css
+++ b/src/styles/TodoCounter.css
@@ -1,3 +1,6 @@
+
+
+
 .todoCounter{
     font-family: 'Indie Flower', cursive;
     font-family: 'Montserrat', sans-serif;
@@ -16,5 +19,6 @@
 
 .confeti{
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    
 }
