--- a/src/styles/TodoItem.css
+++ b/src/styles/TodoItem.css
@@ -72,3 +72,10 @@
     color: red;
     text-decoration: line-through;
 }
+
+@media (max-width: 600px) {
+    .todoItem{
+        font-size: 16px;
+    }
+    
+  }
