--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -8,6 +8,5 @@
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: rgba(0, 0, 0, 0.734)
-    
+    background-color: rgba(0, 0, 0, 0.734);
 }
