--- a/src/styles/TodoCounter.css
+++ b/src/styles/TodoCounter.css
@@ -1,10 +1,7 @@
 
-
-
 .todoCounter{
-    font-family: 'Indie Flower', cursive;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
+    font-weight: 300; 
 }
 
 .todoCounter span{
@@ -12,13 +9,36 @@
     font-size: 35px;
 }
 
-.contrat-gif{
+.congrat-gif{
     width: 10vw;
     min-width: 95px;
 }
 
 .confeti{
-    width: 100vw;
+    width: 60vw;
     height: 100%;
-    
+    min-height: 100vh;
+    margin-left: 20vw;
+
+ 
 }
+
+@media (max-width: 900px) {
+    .confeti{
+        width: 100vw;
+        margin-left: 0;
+    }
+    
+  }
+
+@media (max-width: 600px) {
+    .todoCounter{
+        font-size: 20px;
+        margin-top: 20px;
+        
+    }
+    .todoCounter span{
+        font-size: 25px;
+    }
+    
+  }
