--- a/src/styles/TodoForm.css
+++ b/src/styles/TodoForm.css
@@ -6,7 +6,7 @@ form {
     width: 30vw;
     min-width: 400px;
     height: 45vh;
-    background: #f0db4f;
+    background: #f0da4fec;
     border-radius: 10px;
     border: 2px solid black;
     box-shadow: 0px 2px 20px 5px rgba(0, 0, 0, 0.5); 
