--- a/src/styles/TodoSearch.css
+++ b/src/styles/TodoSearch.css
@@ -1,6 +1,6 @@
 .label-container{
     width: 45vw;
-    min-width: 200px;
+    min-width: 10px;
     height: 32px;
     padding: 0 5px;
     border-radius: 5px;
@@ -11,9 +11,25 @@
     align-items: center;
     justify-content: space-between;
     background-color: white;
-    
 
+    animation-name: animacionAncho;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    
 }
+
+    @keyframes animacionAncho {
+        0% {
+            opacity: 10%;
+            width: 10px;
+        }
+    
+        100% {
+            opacity: 100%;
+            width: 45vw;
+        }
+    }
+   
 
 .label-container:focus-within{
     border: 1px solid skyblue;
@@ -29,10 +45,37 @@
     font-family: 'Indie Flower', cursive;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
+    transition: 2s;
+  
 }
+
 
 .search-icon{
     color: grey;
 }
 
 
+
+@media (max-width: 600px) {
+    .label-container{
+   
+        width: 215px;
+        animation-name: animacionAncho;
+        animation-duration: 3s;
+        animation-timing-function: ease-out;
+        
+    }
+    
+    @keyframes animacionAncho {
+        0% {
+            opacity: 10%;
+            width: 10px;
+        }
+      
+        100% {
+            opacity: 100%;
+            width: 215px;
+        }
+      }
+      
+  }
