formateado de paginas CSS

--- a/src/styles/EmptyTodos.css
+++ b/src/styles/EmptyTodos.css
@@ -1,5 +1,5 @@
-p{
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
+p {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
 }
