--- a/src/styles/TodoForm.css
+++ b/src/styles/TodoForm.css
@@ -1,180 +1,175 @@
 form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 30vw;
-    min-width: 400px;
-    height: 45vh;
-    background: #f0da4fec;
-    border-radius: 10px;
-    border: 2px solid black;
-    box-shadow: 0px 2px 20px 5px rgba(0, 0, 0, 0.5); 
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400; 
-    font-size: 25px;   
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 30vw;
+  min-width: 400px;
+  height: 45vh;
+  background: #f0da4fec;
+  border-radius: 10px;
+  border: 2px solid black;
+  box-shadow: 0px 2px 20px 5px rgba(0, 0, 0, 0.5);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 25px;
 }
 
-textArea{
-    background-color: white;
-    box-shadow: 0px 2px 20px 5px rgba(46, 101, 116, 0.5); 
-    border-radius: 3px;
-    width: 90%;
-    height: 40%;
-    font-size: 18px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300; 
-    margin-bottom: 20px;
-    outline: none;   
+textArea {
+  background-color: white;
+  box-shadow: 0px 2px 20px 5px rgba(46, 101, 116, 0.5);
+  border-radius: 3px;
+  width: 90%;
+  height: 40%;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  margin-bottom: 20px;
+  outline: none;
 }
 
-.TodoForm-buttonContainer{
-    width: 90%;
-    display: flex;
-    justify-content: space-around;
-    height: 15%; 
-    margin-bottom: 20px;
+.TodoForm-buttonContainer {
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
+  height: 15%;
+  margin-bottom: 20px;
 }
 
-.TodoForm-button{
-    width: 40%;
-    box-shadow: 0px 2px 20px 5px rgba(46, 101, 116, 0.5); 
-    font-family: 'Poppins', sans-serif;
-    font-weight: 200;
-    font-size: 70%;
-    border: 2px solid rgb(62, 62, 62);
-    border-radius: 5px;
-    cursor: pointer; 
-    transition: 0.3s;
+.TodoForm-button {
+  width: 40%;
+  box-shadow: 0px 2px 20px 5px rgba(46, 101, 116, 0.5);
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-size: 70%;
+  border: 2px solid rgb(62, 62, 62);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
-.TodoForm-button:hover{
-    background-color:rgb(109, 109, 109);
-    transform: scale(1.1);
+.TodoForm-button:hover {
+  background-color: rgb(109, 109, 109);
+  transform: scale(1.1);
 }
 
-.TodoForm-button--cancel{
-    background-color: rgba(0, 0, 0, 0.653);
-    color: white;
+.TodoForm-button--cancel {
+  background-color: rgba(0, 0, 0, 0.653);
+  color: white;
 }
 
-.TodoForm-button--add{
-    background-color: rgb(0, 0, 0);
-    color: white;
+.TodoForm-button--add {
+  background-color: rgb(0, 0, 0);
+  color: white;
 }
 
-.TodoForm-gifContainer{
-width: 100%;
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-right: 5px;
-
+.TodoForm-gifContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 5px;
 }
 
-.modal-label{   
-    margin-left: 25px;
-    margin-top: 35px;
-    color: black;  
-    animation: 1s label 0s ease-in ;
+.modal-label {
+  margin-left: 25px;
+  margin-top: 35px;
+  color: black;
+  animation: 1s label 0s ease-in;
 }
 
-    @keyframes label {
-        0% {
-            transform: translateY(-50px);
-        }
-        50% {
-            transform: translateY(0px);
-        }
-        60% {
-            transform: translateY(-18px);
-        }
-        100% {
-            transform: translateY(0px);
-        }
-    }
-
-.TodoForm-gif{
-    width: 20%;
-    min-width: 85px;
-    animation: 1.5s gif 0s ease-in ;  
+@keyframes label {
+  0% {
+    transform: translateY(-50px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  60% {
+    transform: translateY(-18px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
-    @keyframes gif {
-        0% {
-            transform: translateX(-390%);
-        }
-        50% {
-            transform: translateX(-5px);
-        }
-        60% {
-            transform: translateX(-35px);
-        }
-        100% {
-            transform: translateX(0px);
-        }
-    }
+.TodoForm-gif {
+  width: 20%;
+  min-width: 85px;
+  animation: 1.5s gif 0s ease-in;
+}
+
+@keyframes gif {
+  0% {
+    transform: translateX(-390%);
+  }
+  50% {
+    transform: translateX(-5px);
+  }
+  60% {
+    transform: translateX(-35px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
 
 @media (max-width: 800px) {
-    form {
-        font-size: 20px;
-    }
+  form {
+    font-size: 20px;
+  }
 
-    textArea{  
-        font-size: 16px;
-  
+  textArea {
+    font-size: 16px;
+  }
+  .TodoForm-gif {
+    min-width: 80px;
+    animation: 2s gif 0s ease-in;
+  }
+  @keyframes gif {
+    0% {
+      transform: translateX(-350%);
     }
-    .TodoForm-gif{
-        min-width: 80px;
-        animation: 2s gif 0s ease-in ;
+    50% {
+      transform: translateX(-5px);
     }
-        @keyframes gif {
-            0% {
-                transform: translateX(-350%);
-            }
-            50% {
-                transform: translateX(-5px);
-            }
-            60% {
-                transform: translateX(-35px);
-            }
-            100% {
-                transform: translateX(0px);
-            }
-        }
+    60% {
+      transform: translateX(-35px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
 }
 @media (max-width: 400px) {
-    form {
-        min-width: 250px;
-        font-size: 20px;
-        height: 35vh;
+  form {
+    min-width: 250px;
+    font-size: 20px;
+    height: 35vh;
+  }
+  textArea {
+    margin-top: 5px;
+    font-size: 16px;
+  }
+  .TodoForm-gif {
+    min-width: 80px;
+    animation: 2s gif 0s ease-in;
+  }
+  @keyframes gif {
+    0% {
+      transform: translateX(-200%);
     }
-    textArea{
-        margin-top: 5px;
-        font-size: 16px;  
+    50% {
+      transform: translateX(-5px);
     }
-    .TodoForm-gif{
-        min-width: 80px;
-        animation: 2s gif 0s ease-in ;
+    60% {
+      transform: translateX(-35px);
     }
-        @keyframes gif {
-            0% {
-                transform: translateX(-200%);
-            }
-            50% {
-                transform: translateX(-5px);
-            }
-            60% {
-                transform: translateX(-35px);
-            }
-            100% {
-                transform: translateX(0px);
-            }
-        }
-    .TodoForm-button{
-        width: 45%;
-        
+    100% {
+      transform: translateX(0px);
     }
-    
-    
+  }
+  .TodoForm-button {
+    width: 45%;
+  }
 }
