--- a/src/styles/CreateTodoButton.css
+++ b/src/styles/CreateTodoButton.css
@@ -1,33 +1,26 @@
-.createTodoButton{
-    
-    background-color:  #61DAFA;
-    box-shadow: 0px 2px 25px 15px rgba(46, 101, 116, 0.5); 
-    border: none;
-    border-radius: 50%;
-    cursor:pointer;
-    font-size: 45px;
-    position: fixed;
-    bottom: 24px;
-    right: 24px;
-    font-weight: bold;
-    color: #fafafa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 64px;
-    height: 64px;
-    z-index: 1;
-
-    
-
-
-   
-    transition: 0.3s ease;
-
+.createTodoButton {
+  background-color: #61dafa;
+  box-shadow: 0px 2px 25px 15px rgba(46, 101, 116, 0.5);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 45px;
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  font-weight: bold;
+  color: #fafafa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 64px;
+  height: 64px;
+  z-index: 1;
+  transition: 0.3s ease;
 }
 
-.createTodoButton:hover{
-    background-color:aqua; 
-    transform: scale(1.2) rotate(270deg);
-    transition: 0.3s;
+.createTodoButton:hover {
+  background-color: aqua;
+  transform: scale(1.2) rotate(270deg);
+  transition: 0.3s;
 }
